Remove --illegal-access option in test base plugin
The `--illegal-access` option is deprecated and will be removed in
a future release. The default going forwards is `deny`.